package edu.fiuba.algo3.modelo.Ubicacion;

public class NoUbicacion extends Ubicacion {
    @Override
    protected boolean tieneUbicacion(char ubicacion) {
        boolean tieneUbicacion = false;
        return tieneUbicacion;
    }

    @Override
    public int getUbicacionInt() {
        return 0;
    }
}
