package edu.fiuba.algo3.modelo.Ubicacion;

public abstract class Ubicacion {
    protected abstract boolean tieneUbicacion(char ubicacion);

    public abstract int getUbicacionInt();
}
